IDEA-131748 Stop debug session kills all processes - read taskkill output and log in case of error